# LedgerLens

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
app/core/: config.py  exceptions.py  security.py
app/db/: database.py  models.py
app/models/: schemas.py
app/routers/: auth.py  evaluation.py  health.py  ingestion.py  query.py
app/services/: cache.py  compressor.py  embeddings.py  etl.py  evaluation.py  guardrails.py  llm.py  reranker.py  vector_store.py
app/utils/: logging_config.py
tests/: TEST_DOCUMENTS_QUICKSTART.md  conftest.py  generate_docs.py  generate_test_documents.py  test_cache_and_llm.py  test_ingest_query_integration.py  test_ingestion_with_documents.py  test_security.py
tests/fixtures/: README.md  financial_data.xml  ledger.json  report.txt  transactions.csv
