[project]
name = "financial-rag"
version = "0.1.0"
description = "Enterprise Multimodal Financial RAG with RBAC"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Security    
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.10.0",

    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Vector store
    "qdrant-client>=1.12.0",
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # ML / embeddings
    "sentence-transformers>=3.2.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-openai>=1.2.2",
    "langchain-community>=0.4.2",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "numpy>=1.26.0",

    # Document parsing
    "llama-parse>=0.5.0",
    "markdownify>=0.13.0",
    "pdfplumber>=0.11.0",

    # LLM client
    "openai>=1.54.0",
    "httpx>=0.27.0",

    # Context compression / reranking
    "llmlingua>=0.2.0",

    # Evaluation
    "ragas>=0.2.0",
    "datasets>=3.1.0",

    # Async & caching
    "redis>=5.0.0",
    "tenacity>=9.0.0",

    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "prometheus-client>=0.21.0",

    # Development
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]
